--- a/app-android/res/layout/main.xml
+++ b/app-android/res/layout/main.xml
@@ -14,5 +14,11 @@
             android:layout_height="wrap_content"
             android:text="@string/button"
             android:onClick="clickMe"/>
+    <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Not Important!!"
+            android:id="@+id/checkBox" android:layout_gravity="left|center_vertical" android:checked="false"
+            android:onClick="CheckMe"/>
 </LinearLayout>
 
