#6(Chen): center component on first page.

--- a/app-android/res/layout/main.xml
+++ b/app-android/res/layout/main.xml
@@ -5,15 +5,15 @@
     android:layout_height="fill_parent"
     >
     <TextView
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_album_text"
-    />
+        android:layout_gravity="center"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/create_album_button"
-            android:onClick="createAlbum"/>
+            android:onClick="createAlbum" android:layout_gravity="center"/>
 
 </LinearLayout>
 
