--- a/app-android/res/layout/album.xml
+++ b/app-android/res/layout/album.xml
@@ -5,4 +5,17 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/take_picture"
+        android:id="@+id/btn_take_pic"
+        android:layout_gravity="center"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_gravity="center"/>
 </LinearLayout>
