--- a/app-android/res/layout/main.xml
+++ b/app-android/res/layout/main.xml
@@ -15,5 +15,13 @@
             android:text="@string/create_album_button"
             android:onClick="createAlbum" android:layout_gravity="center"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="To Album"
+        android:id="@+id/button"
+        android:layout_gravity="center"
+        android:onClick="onClickToAlbum"/>
+
 </LinearLayout>
 
