--- a/app-android/res/layout/main.xml
+++ b/app-android/res/layout/main.xml
@@ -27,9 +27,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="设定拍照提醒"
-            android:id="@+id/set_notification"
+            android:id="@+id/set_reminder"
             android:layout_gravity="center"
-            android:onClick="setNotification"/>
+            android:onClick="setReminder"/>
 
 </LinearLayout>
 
