memmo - albumlist (Enyu): list the albums after creating album.

--- a/app-android/res/layout/albumlistview.xml
+++ b/app-android/res/layout/albumlistview.xml
@@ -30,6 +30,6 @@
 	<Button android:id="@+id/view_btn"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/no_album_text"
-		android:layout_gravity="bottom|right"/>
+		android:text="view"
+        android:layout_gravity="right"/>
 </LinearLayout>
