--- a/app-android/res/layout/albumlistview.xml
+++ b/app-android/res/layout/albumlistview.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="horizontal" 
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content">
 
 
 	<ImageView android:id="@+id/img" 
@@ -29,7 +29,7 @@
 
 	<Button android:id="@+id/view_btn"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_height="fill_parent"
 		android:text="view"
-        android:layout_gravity="right"/>
+        android:layout_gravity="right" android:layout_marginRight="0dp"/>
 </LinearLayout>
