--- a/app-android/res/layout/main.xml
+++ b/app-android/res/layout/main.xml
@@ -26,7 +26,7 @@
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="设定拍照提醒"
+            android:text="@string/set_notification_button"
             android:id="@+id/set_reminder"
             android:layout_gravity="center"
             android:onClick="setReminder"/>
@@ -34,7 +34,7 @@
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="相册列表"
+            android:text="@string/album_list_button"
             android:id="@+id/albumlist"
             android:layout_gravity="center"
             android:onClick="listAlbums"/>
