--- a/app-android/res/layout/newalbum.xml
+++ b/app-android/res/layout/newalbum.xml
@@ -14,4 +14,14 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/album_name"
             android:gravity="left"/>
+
+    <TextView
+            android:id="@+id/notificationinfo"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="20dip"
+            android:layout_marginRight="20dip"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/no_notification"
+            android:gravity="left"/>
 </LinearLayout>
