--- a/app-android/res/layout/album.xml
+++ b/app-android/res/layout/album.xml
@@ -5,17 +5,23 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/take_picture"
-        android:id="@+id/btn_take_pic"
-        android:layout_gravity="center"
-        />
+    <TextView
+            android:id="@+id/newalbumname"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="20dip"
+            android:layout_marginRight="20dip"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/album_name"
+            android:gravity="left"/>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_gravity="center"/>
+    <TextView
+            android:id="@+id/notificationinfo"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="20dip"
+            android:layout_marginRight="20dip"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/no_notification"
+            android:gravity="left"/>
 </LinearLayout>
