--- a/app-android/res/layout/createalbum.xml
+++ b/app-android/res/layout/createalbum.xml
@@ -51,7 +51,7 @@
             android:layout_marginLeft="20dip"
             android:layout_marginRight="20dip"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/reminder"
+            android:text="@string/reminder_text"
             android:gravity="left"/>
     <EditText
             android:id="@+id/txt_reminder"
