--- a/app-android/res/layout/album.xml
+++ b/app-android/res/layout/album.xml
@@ -24,4 +24,16 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/no_notification"
             android:gravity="left"/>
+
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/gridview"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:columnWidth="90dp"
+              android:numColumns="auto_fit"
+              android:verticalSpacing="10dp"
+              android:horizontalSpacing="10dp"
+              android:stretchMode="columnWidth"
+              android:gravity="center"
+            />
 </LinearLayout>
