--- a/app-android/res/layout/album.xml
+++ b/app-android/res/layout/album.xml
@@ -12,7 +12,7 @@
             android:layout_marginLeft="20dip"
             android:layout_marginRight="20dip"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/album_name"
+            android:text="@string/lbl_album_name"
             android:gravity="left"/>
 
     <TextView
@@ -22,7 +22,7 @@
             android:layout_marginLeft="20dip"
             android:layout_marginRight="20dip"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/no_notification"
+            android:text="@string/msg_no_alarm"
             android:gravity="left"/>
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
