Enyu: set the default image for the album list.

--- a/app-android/res/layout/albumlist.xml
+++ b/app-android/res/layout/albumlist.xml
@@ -13,9 +13,9 @@
                   android:layout_height="fill_parent">
 
         <ImageView android:id="@+id/img"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_margin="5px"/>
+                   android:layout_width="60dp"
+                   android:layout_height="60dp"
+                   android:layout_margin="5px" android:maxHeight="100dp" android:maxWidth="100dp"/>
 
         <LinearLayout android:orientation="vertical"
                       android:layout_width="wrap_content"
